--- a/assets/common.css
+++ b/assets/common.css
@@ -1,56 +1,1 @@
-body {
-    font-family: 'Open Sans', sans-serif;
-    background-color: #f2f2f2;
-    margin: 0;
-    padding: 0;
-}
-
-.container {
-    max-width: 1200px;
-    /* Limits the width for larger screens */
-    margin: 0 auto;
-    padding: 0 15px;
-    color: #000;
-}
-
-.card {
-    border: none;
-    box-shadow: 0 4px 40px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    overflow: hidden;
-    background-color: #fff;
-    /* Ensures a consistent background */
-}
-
-.card-header {
-    background-color: #fff;
-    color: #818084;
-    padding: 10px;
-    border-bottom: 1px solid #e1e1e1;
-    /* Subtle separation from card body */
-}
-
-#download {
-    position: relative;
-    text-align: center;
-    /* Center align the button */
-}
-
-#download .btn {
-    display: inline-block;
-    /* Ensures proper spacing */
-    padding: 15px 40px;
-    font-size: 18px;
-    border-radius: 30px;
-    color: #fff;
-    background: linear-gradient(45deg, #4caf50, #0076ce);
-    /* Gradient for modern look */
-    border: none;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    /* Adjusted transition for smoother effect */
-}
-
-#download .btn:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 5px 40px rgba(90, 137, 246, 0.2);
-}
+.card,.card-header{background-color:#fff}body{font-family:'Open Sans',sans-serif;background-color:#f2f2f2;margin:0;padding:0}.container{max-width:1200px;margin:0 auto;padding:0 15px;color:#000}.card{border:none;box-shadow:0 4px 40px rgba(0,0,0,.1);border-radius:10px;overflow:hidden}.card-header{color:#818084;padding:10px;border-bottom:1px solid #e1e1e1}#download{position:relative;text-align:center}#download .btn{display:inline-block;padding:15px 40px;font-size:18px;border-radius:30px;color:#fff;background:linear-gradient(45deg,#4caf50,#0076ce);border:none;transition:transform .3s,box-shadow .3s}#download .btn:hover{transform:translateY(-5px);box-shadow:0 5px 40px rgba(90,137,246,.2)}
